--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
   margin: 0;
 }
 
-/* SignIn.css */
+/* SignIn.css -----------------------------------------------------------------------*/
 
 .signin-container {
   display: flex;
@@ -118,4 +118,78 @@
   align-items:center;
   justify-content: space-between;
   
+}
+
+/* signupscreen --------------------------------------------------------*/
+
+.signup{
+  margin: 150px 350px;
+  border: 1px  solid #DEDFE1;
+  padding-left: 70px;
+  height: 100%;
+
+ 
+}
+.signup h2 {
+  font-family: "Oxygen", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: #3D3D3D;
+  margin-bottom: 20px;
+}
+.signup p {
+  font-family: "Oxygen", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20;
+  margin-bottom: 20px;
+  color: #949494;
+}
+.form-group {
+  margin: 20px 0;
+}
+
+.file-input {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  max-width: 300px;
+}
+
+.file {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.file-label {
+  display: inline-block;
+  background-color: #FA8232;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.file-name {
+  margin-left: 10px;
+  font-size: 14px;
+  color: #666;
+}
+.horizontal{
+  border-bottom: 1px solid #E4E7E9; 
+  margin: 20px 0;
+   width: 80px;
+}
+.signup-with-google{
+  margin-bottom: 40px;
+}
+.signup-with-google div{
+  display: flex;
+  align-items: center;
 }
