--- a/client/src/index.css
+++ b/client/src/index.css
@@ -123,21 +123,21 @@
 /* signupscreen --------------------------------------------------------*/
 
 .signup{
-  margin: 150px 350px;
+  margin: 80px 350px;
   border: 1px  solid #DEDFE1;
   padding-left: 70px;
   height: 100%;
 
  
 }
-.signup h2 {
+.signup h2 , .Forget h2{
   font-family: "Oxygen", sans-serif;
   font-weight: 700;
   font-style: normal;
   color: #3D3D3D;
   margin-bottom: 20px;
 }
-.signup p {
+.signup p , .Forget p{
   font-family: "Oxygen", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -148,7 +148,23 @@
 .form-group {
   margin: 20px 0;
 }
+.form-group input[type="file"] {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
 
+.file-input input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
 .file-input {
   position: relative;
   display: inline-block;
@@ -182,7 +198,7 @@
   color: #666;
 }
 .horizontal{
-  border-bottom: 1px solid #E4E7E9; 
+  border-bottom: 3px solid #E4E7E9; 
   margin: 20px 0;
    width: 80px;
 }
@@ -260,4 +276,15 @@
 
 .link:hover {
   text-decoration: underline;
+}
+
+/* forgetpasssword --------------------------------------------------------*/
+
+.Forget{
+  margin: 80px 550px;
+  border: 1px  solid #DEDFE1;
+  padding-left: 70px;
+  padding-bottom: 50px;
+  height: 100%;
+
 }
