--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -5,6 +5,7 @@
     color: #FFFFFF;
     height: 150px;
     background-color: #1B6392;
+    
   }
   
   .col1 {
@@ -14,20 +15,22 @@
     background-color: #1B6392;
     height: 50%;
     padding-right: 5%; 
-  padding-left: 5%;
+    padding-left: 5%;
+    
   }
   
   .logo {
     margin-right: 20px;
-    width: 80px; /* Ajustez la taille du logo selon vos besoins */
+    width: 80px;
   }
   
   .nav-links {
+   left: 0;
     display: flex;
     align-items: center;
-    gap: 30px;
-    margin-right: 20px;
+    gap: 20px;
     color: white;
+    
   }
   
   .nav-links a {
