--- a/client/src/index.css
+++ b/client/src/index.css
@@ -303,3 +303,5 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* Homescreen ---------------------------------------------------------------- */
