--- a/client/src/components/featuredProduct/FeaturedProducts.css
+++ b/client/src/components/featuredProduct/FeaturedProducts.css
@@ -9,7 +9,7 @@
     font-family: "Oxygen", sans-serif;
     font-weight: 700;
     font-style: normal;
-    
+    color: #3D3D3D;
 }
 .pagination-controls {
     display: flex;
