--- a/client/src/components/ImageCarousel/ImageCarousel.css
+++ b/client/src/components/ImageCarousel/ImageCarousel.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
 .carousel .slide img {
     width: 100%;
-    height: auto;
+    height: 350px;
  
 }
