--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -173,7 +173,7 @@
 }
 .sub-dropdown {
   position: absolute;
-  left: 167%; /* Position it next to the main dropdown */
+  left: 196%; /* Position it next to the main dropdown */
   z-index: 1000;
   width: 250px;
   height: auto;
@@ -188,8 +188,9 @@
 
 .brand-list {
   position: relative;
-  width: 100%;
+  
   list-style-type: none;
+
   margin: 0;
   padding: 0;
   background-color: #fff;
@@ -197,7 +198,7 @@
 
 
 .brand-item {
-  width: 100%;
+  
   height: 50px;
   display: flex;
   align-items: center;
@@ -208,6 +209,8 @@
   font-weight: 400;
   font-style: normal;
   color: #5F6C72;
+  padding-left: 10px;
+  
 }
 
 
