--- a/client/src/index.css
+++ b/client/src/index.css
@@ -305,3 +305,82 @@
 }
 
 /* Homescreen ---------------------------------------------------------------- */
+.Xiaomi{
+  width: 100%;
+  height: 25rem;
+  display: flex;
+  margin-top: 2.8rem;
+}
+.left{
+  width: 50%;
+  height: 100%;
+  background-color: #F2F4F5;
+   display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.right{
+  width: 50%;
+  height: 100%;
+  background-color: #1F1919;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+ .left *{
+  font-family: "Public Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+ 
+}
+.right *{
+  font-family: "Public Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+ 
+}
+.introducing{
+  background-color: #EE5858;
+  font-size: 1rem;
+  padding: 4px;
+  width: 7.5rem;
+}
+.name{
+  font-size: 2rem;
+}
+.left_left{
+  width: 20rem;
+}
+.right-left{
+  width: 20rem;
+}
+.introducing-right{
+  background-color: #EFD33D;
+  font-size: 1rem;
+  padding: 4px;
+  width: 10rem;
+}
+.name-right{
+  color: #ffffff;
+  font-size: 2rem;
+}
+.prix{
+  background-color: #EFD33D;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.image-right img{
+  width: 19.5rem;
+  height: 21rem ;
+
+}
+.right-right{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
