--- a/client/src/components/Loading/Loading.css
+++ b/client/src/components/Loading/Loading.css
@@ -38,7 +38,7 @@
   
   .spinner {
     border: 4px solid rgba(0, 0, 0, 0.1);
-    border-left-color: #3498db;
+    border-left-color: #FA8232;
     animation: spin 1s infinite linear;
     border-radius: 50%;
     width: 50px;
