--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
  body {
   margin: 0;
+  padding: 0;
 }
 
 /* SignIn.css -----------------------------------------------------------------------*/
@@ -118,13 +119,13 @@
   flex-direction: column;
   align-items:center;
   justify-content: space-between;
-  
 }
 
 /* signupscreen --------------------------------------------------------*/
 
 .signup{
-  margin: 80px 350px;
+  max-width: 1200px;
+  margin: 0 auto ;
   border: 1px  solid #DEDFE1;
   padding-left: 70px;
   height: 100%;
@@ -282,7 +283,8 @@
 /* forgetpasssword --------------------------------------------------------*/
 
 .Forget{
-  margin: 80px 550px;
+  max-width: 1200px;
+  margin: 0 auto ;
   border: 1px  solid #DEDFE1;
   padding-left: 70px;
   padding-bottom: 50px;
@@ -306,6 +308,14 @@
 }
 
 /* Homescreen ---------------------------------------------------------------- */
+
+.home{
+  max-width: 1905px;
+  margin: 0 auto ;
+ 
+  
+}
+
 .Xiaomi{
   width: 100%;
   height: 25rem;
@@ -465,4 +475,163 @@
 .name-mac{
   color: #000;
   font-size: 2.5rem;
+}
+
+
+/* ProductScreen ----------------------------------------- */
+label{
+  display:block;
+  line-height:40px;
+  cursor: pointer;
+}
+.option-input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  position: relative;
+  top: 9px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 30px;
+  width: 30px;
+  transition: all 0.15s ease-out 0s;
+  background: #cbd1d8;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  margin-right: 0.5rem;
+  outline: none;
+  position: relative;
+  z-index: 1000;
+}
+.option-input:hover {
+  background: #9faab7;
+}
+.option-input:checked {
+  background: #FA8232;
+}
+.option-input :checked::before {
+  width: 30px;
+  height: 30px;
+  display:flex;
+  content: '\f00c';
+  font-size: 25px;
+  font-weight:bold;
+  position: absolute;
+  align-items:center;
+  justify-content:center;
+  font-family:'Font Awesome 5 Free';
+}
+.option-input:checked::after {
+  background: #FA8232;
+  content: '';
+  display: block;
+  position: relative;
+  z-index: 100;
+}
+.option-input.radio {
+  border-radius: 50%;
+}
+.option-input.radio::after {
+  border-radius: 50%;
+}
+
+.catgorie{
+  display: block;
+  position: relative;
+  height: auto;
+}
+.categorylist{
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+.list-c{
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  height: auto;
+}
+.facet__link {
+  color: #191C1F;
+  text-decoration: none;
+  margin: 5px 0;
+  position: relative;
+  font-family: "Public Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  cursor: pointer;
+  width: 150px;
+ 
+}
+
+.brand-filter{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 60%;
+  padding: 30px;
+}
+.brandlist {
+  display: flex;
+  flex-wrap: wrap;
+ align-items: center;
+ justify-content: space-between;
+
+  label {
+    margin-right: 10px;
+  }
+}
+.search{
+  display: flex;
+  padding: 30px;
+  max-width: 1905px;
+  margin: 0 auto ;
+  
+}
+.productList{
+  display: flex;
+  flex-direction: column;
+}
+.searchproduct{
+  display: flex;
+  flex-wrap: wrap;
+ align-items: flex-start;
+
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.pagination-button {
+  background-color: #fff;
+  color: #007bff;
+  border: 1px solid #007bff;
+  padding: 10px 15px;
+  margin: 0 5px;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 16px;
+  transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+
+  &:disabled {
+    background-color: #f8f9fa;
+    color: #6c757d;
+    border-color: #dee2e6;
+    cursor: not-allowed;
+  }
+
+  &:hover:not(:disabled) {
+    background-color: #007bff;
+    color: #fff;
+    border-color: #007bff;
+  }
 }
