--- a/client/src/index.css
+++ b/client/src/index.css
@@ -312,8 +312,6 @@
 .home{
   max-width: 1905px;
   margin: 0 auto ;
- 
-  
 }
 
 .Xiaomi{
@@ -634,4 +632,149 @@ label{
     color: #fff;
     border-color: #007bff;
   }
+}
+
+
+/* productDeatails ---------------------------------- */
+
+.peoductscreen{
+    max-width: 1905px;
+    margin: 0 auto ;
+    padding: 30px;
+  
+}
+
+.productDetail{
+  display: flex;
+  justify-content: center;
+   font-family: "Oxygen", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  width: 90%;
+}
+.productDetail-right{
+  width: 50%;
+}
+
+.product-actions {
+  display: flex;
+  flex-direction: column;
+  
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.quantity-selector {
+  display: flex;
+  align-items: center;
+  border: 1px solid #ddd;
+  border-radius: 30px;
+  width: 123px;
+  overflow: hidden;
+}
+
+.quantity-button {
+  background-color: #f5f5f5;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.quantity-display {
+  padding: 10px 20px;
+  font-size: 18px;
+}
+
+.add-to-cart, .buy-now {
+  background-color: #ff7a00;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  width: 100%;
+  max-width: 570px;
+  text-align: center;
+  transition: background-color 0.3s ease;
+}
+
+.buy-now {
+  background-color: white;
+  color: #ff7a00;
+  border: 1px solid #ff7a00;
+}
+
+.add-to-cart:hover {
+  background-color: #e06800;
+}
+
+.buy-now:hover {
+  background-color: #ff7a00;
+  color: white;
+}
+
+.add-to-cart span {
+  margin-left: 10px;
+  display: inline-block;
+  transform: translateY(1px);
+}
+.horizontal-line{
+  border-bottom: 3px solid #E4E7E9; 
+  margin: 20px 0;
+   width: 900px;
+}
+.safe-checkout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 65%;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #fff;
+}
+
+.safe-checkout p {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.payment-icons {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.payment-icons img {
+  max-height: 30px;
+  margin: 0 15px;
+}
+
+.ppp {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.description{
+  
+  max-height: 300px;
+  overflow-y: auto; 
+  padding-right: 10px; 
+}
+.description::-webkit-scrollbar {
+  width: 8px;
+}
+.description::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 4px;
+}
+.caroselimage-productdetail{
+  width: 50%;
 }
