--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -279,17 +279,18 @@
   button:hover {
     text-decoration: underline;
   }
-  .badge {
-    background-color: #ff6347;
-    color: white;
-    border-radius: 50%;
-    padding: 5px 10px;
-    font-size: 12px;
-    position: absolute;
-    top: -10px;
-    right: -10px;
-  }
+  
  
-.cart-badge{
+.badge-cart{
   display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.badge {
+  background-color: #f02020;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 0.2rem 0.7rem;
+  margin-left: 0.2rem;
+  position: static;
 }
