--- a/client/src/index.css
+++ b/client/src/index.css
@@ -637,10 +637,13 @@ label{
 
 /* productDeatails ---------------------------------- */
 
-.peoductscreen{
+.productdetailscreen{
     max-width: 1905px;
     margin: 0 auto ;
-    padding: 30px;
+    
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
   
 }
 
@@ -651,6 +654,7 @@ label{
   font-weight: 500;
   font-style: normal;
   width: 90%;
+  padding: 30px;
 }
 .productDetail-right{
   width: 50%;
@@ -761,6 +765,7 @@ label{
   display: flex;
   align-items: center;
   gap: 5px;
+  padding: 30px;
 }
 .description{
   
@@ -777,4 +782,137 @@ label{
 }
 .caroselimage-productdetail{
   width: 50%;
+}
+
+.vertical-line{
+  border-left: 3px solid #E4E7E9; 
+   height: 40px;
+   width: 0;
+}
+.Description-review{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  font-family: "Oxygen", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: #696969;
+}
+.Review{
+  background-color: #FDF3D2;
+
+
+}
+.body-Review{
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.reviews-user{
+  display: flex;
+  gap: 20px;
+  padding: 30px;
+  border: 1px solid #D3D3D3;
+}
+.name-review{
+  font-family: "Oxygen", sans-serif;
+  font-weight: 700;
+  font-style: bold;
+}
+.Like{
+  display: flex;
+  gap: 30px;
+  font-family: "Oxygen", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.review-form {
+  background-color: #f8e680;
+  padding: 20px;
+  border-radius: 10px;
+ 
+  
+}
+
+.form-group {
+  display: flex;
+ align-items: space-between;
+  margin-bottom: 20px;
+  gap: 10px;
+}
+
+.avatar {
+  width: 50px;
+  height: 50px;
+  background-color: #ccc;
+  border-radius: 50%;
+  margin-right: 20px;
+}
+
+.input-container {
+  flex: 1;
+  margin-right: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.display-value {
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  margin-bottom: 10px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+textarea {
+  height: 100px;
+}
+
+.ratings {
+  display: flex;
+  gap: 5px;
+}
+
+.star {
+  font-size: 24px;
+  color: #ccc;
+  cursor: pointer;
+}
+
+.star.selected {
+  color: #ff8c00;
+}
+
+
+.post-review {
+  background-color: #ff8c00;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 150px;
+  margin-left: auto;
+}
+
+.post-review:hover {
+  background-color: #ff7518;
 }
