--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -84,7 +84,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #FFFFFF;
-    padding-right: 5%; 
+    padding-right: 2%; 
     padding-left: 5%;
     height: 50%;
     border: 1px solid black;
@@ -255,7 +255,7 @@
   .user-actions {
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: 20px;
   }
   
   .user-actions a {
@@ -268,6 +268,14 @@
   .user-actions a:hover {
     color: #FA8232;
     text-decoration: underline;
+  }
+  .user{
+    display: flex;
+    align-items: center;
+  }
+  .user-name{
+    color: #000000;
+    font-size: large;
   }
   
   button {
@@ -286,7 +294,7 @@
   align-items: center;
   justify-content: center;
 }
-.badge {
+.badge-item {
   background-color: #f02020;
   color: #ffffff;
   border-radius: 50%;
