--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -255,7 +255,7 @@
   .user-actions {
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
   }
   
   .user-actions a {
@@ -272,10 +272,20 @@
   .user{
     display: flex;
     align-items: center;
+    padding: 5px;
+  }
+  .user:hover{
+    background-color: #dfe2e2;
+    cursor: pointer;
   }
   .user-name{
     color: #000000;
     font-size: large;
+  }
+  .user-item{
+    display: flex;
+    align-items: center;
+    gap: 15px;
   }
   
   button {
@@ -293,6 +303,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  padding: 15px ;
+  
+}
+.badge-cart:hover{
+    background-color: #dfe2e2;
+   
 }
 .badge-item {
   background-color: #f02020;
