Style .cart-container for responsive cart layout
- Set max-width to 1905px and center-align with margin auto
- Use flex display for responsive layout and space-between justification
- Apply padding to ensure adequate spacing and alignment within the container

Signed-off-by: jarray-kais <jarraykais1@gmail.com>

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -953,13 +953,12 @@ textarea {
 }
 
 /* cartscreeen ------------------------------ */
-.cart {
+.cart-container {
+  max-width: 1905px;
+  margin: 0 auto ;
   display: flex;
-  flex-direction: column; /* Pour une meilleure gestion sur mobile */
-  gap: 20px; /* Espacement entre les éléments */
+  justify-content: space-between;
   padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
 }
 
 .cart-left {
