--- a/client/src/index.css
+++ b/client/src/index.css
@@ -979,72 +979,163 @@ textarea {
 
 }
 
-.list-group-item img {
-  width: 100px; /* Ajuster la taille des images */
-  margin-right: 20px;
-  border-radius: 5px; /* Coins arrondis pour les images */
+.cart-item-details {
+  display: flex;
+  align-items: center;
 }
 
-.list-group-item h3 {
-  margin: 0;
-  font-size: 1.2rem; /* Taille de police pour les titres */
-}
-
-.list-group-item select {
+.cart-item-image {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
   margin-right: 10px;
-  padding: 5px;
+}
+
+.cart-item-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.cart-item-name {
+  font-size: 18px;
+  color: #333;
+  text-decoration: none;
+}
+
+.cart-item-price {
+  font-size: 16px;
+  color: #555;
+}
+
+.cart-item-actions {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  width: 20%;
+}
+
+.quantity-btn {
+  padding: 10px 10px;
   border: 1px solid #ccc;
-  border-radius: 3px;
-}
-
-.list-group-item button {
-  background-color: #dc3545;
-  color: white;
-  border: none;
-  padding: 8px 12px;
+  color: #fff;
   cursor: pointer;
-  border-radius: 3px;
+  background-color: #FA8232 ;
 }
 
-.list-group-item button:hover {
-  background-color: #c82333;
+.cart-item-quantity {
+
+  width: 15px;
+  height: 10px;
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+
+.remove-btn {
+  color: #fc150d;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.cart-item-total {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 20px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .cart-summary {
-  border: 1px solid #ddd;
   padding: 20px;
+  border: 1px solid #e0e0e0;
   border-radius: 5px;
   background-color: #f9f9f9;
 }
 
-.cart-summary h3 {
-  margin-bottom: 15px;
-  font-size: 1.3rem;
+.summary-item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
-.cart-summary button {
+.checkout-btn {
   width: 100%;
-  background-color: #007bff;
+  padding: 10px;
+  background-color: #1B6392;
   color: white;
   border: none;
   padding: 10px 0;
   cursor: pointer;
-  border-radius: 3px;
-  margin-top: 10px;
-}
-
-.cart-summary button:hover {
-  background-color: #0056b3;
-}
-
-.cart-summary a {
-  display: block;
   text-align: center;
-  margin-top: 15px;
-  text-decoration: none;
-  color: #007bff;
 }
 
-.cart-summary a:hover {
-  text-decoration: underline;
+/* shipping --------------------------------- */
+.shipping-container {
+  background-color: #fff;
+  padding: 30px;
+  font-family: "Oxygen", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.shipping-body{
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 20px;
+ 
+  
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.shipping-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.shipping-description {
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-label {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.form-control {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 20px;
+  border: 1px solid #ddd;
+  font-size: 14px;
+}
+
+.location-btn,
+.continue-btn {
+  width: 100%;
+  padding: 15px;
+  background-color: #FF7F00;
+  color: #fff;
+  border: none;
+  border-radius: 20px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.location-btn:hover,
+.continue-btn:hover {
+  background-color: #e67e00;
+}
+
+.continue-btn {
+  margin-top: 20px;
 }
