--- a/client/src/components/Loading/Loading.css
+++ b/client/src/components/Loading/Loading.css
@@ -29,7 +29,7 @@
   .overlay {
     display: flex;
   }
-  .container {
+  .container-loading {
     display: flex;
     justify-content: center;
     align-items: center;
