--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -181,9 +181,6 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-
-
-
 }
 
 .brand-list {
@@ -318,4 +315,70 @@
   padding: 0.2rem 0.7rem;
   margin-left: 0.2rem;
   position: static;
+}
+
+
+.search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+}
+.search-bar-suggest {
+  position: relative;
+  width: 70%;
+}
+
+.search-bar-wrapper {
+  position: relative;
+  width: 100%;
+
+}
+
+.search-bar {
+  width: 100%;
+  padding: 12px 12px 12px 40px; /* Adjust padding for the icon */
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  transition: all 0.3s ease-in-out;
+}
+
+/* Styles for the search icon */
+.search-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  width: 20px;
+  height: 20px;
+  pointer-events: none; 
+}
+.suggestions-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  width: 100%;
+ 
+  border-radius: 5px;
+  
+  background-color: #fff;
+  color: #000000;
+ 
+}
+
+.suggestion-item {
+  font-size: 13px;
+  padding: 15px 15px;
+  list-style: none;
+ 
+  cursor: pointer;
+}
+
+.suggestion-item:hover {
+  background-color: #f0f0f0;
 }
