--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -95,7 +95,7 @@
  
 .all-categories {
   position: relative;
-  display: inline-block;
+  width: 150px;
   margin-right: 1.25rem;
 }
 
@@ -133,7 +133,6 @@
   left: 0;
   z-index: 1000;
   width: 250px;
-
   background-color: #FFFFFF;
   border: 1px solid #ccc;
   border-top: none;
@@ -173,21 +172,19 @@
 }
 .sub-dropdown {
   position: absolute;
-  left: 196%; /* Position it next to the main dropdown */
+  left: 250px; 
   z-index: 1000;
   width: 250px;
   height: auto;
   background-color: #FFFFFF;
-  border: 1px solid #ccc;
+  
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .brand-list {
   position: relative;
-  
   list-style-type: none;
-
   margin: 0;
   padding: 0;
   background-color: #fff;
@@ -195,7 +192,6 @@
 
 
 .brand-item {
-  
   height: 50px;
   display: flex;
   align-items: center;
@@ -253,6 +249,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
+   
   }
   
   .user-actions a {
@@ -270,10 +267,15 @@
     display: flex;
     align-items: center;
     padding: 5px;
+    width: 100%;
+    height: 63px;
+
   }
   .user:hover{
     background-color: #dfe2e2;
     cursor: pointer;
+    width: 100%;
+    height: 63px;
   }
   .user-name{
     color: #000000;
@@ -291,9 +293,7 @@
     cursor: pointer;
   }
   
-  button:hover {
-    text-decoration: underline;
-  }
+
   
  
 .badge-cart{
