--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1282,7 +1282,6 @@ textarea {
 	height: 20px;
 	width: 20px;
 	left: 20px;
-	top: 29.5px;
 	transform: scale(5);
 	opacity: 0;
 	visibility: hidden;
@@ -1507,3 +1506,571 @@ textarea {
   gap: 20px;
 }
 
+/* use dashboard ----------------------- */
+
+.dash{
+  max-width: 1905px;
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+  padding-bottom: 0;
+  --font-family-secondary: "Public Sans", sans-serif;
+}
+.dash-content{
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 20px;
+  width: 70%;
+}
+.dash-user {
+ 
+
+  border: 1px solid #ccc;
+}
+.dashboard-list {
+ 
+  width: 250px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  color: #000000;
+}
+#dash-item :hover{
+  background-color: #FA8232;
+  color: #FFF;
+}
+
+.account-info-container {
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  width: 400px;
+  font-family: 'Arial', sans-serif;
+}
+
+.account-info-container h2 {
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #333;
+  padding:10px 20px;
+  text-align: center;
+}
+
+.account-details {
+  display: flex;
+  margin-bottom: 20px;
+  padding: 20px;
+}
+.accountdetails1{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+.account-avatar {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+
+.account-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+}
+.account-text h3 {
+  margin: 0;
+  font-size: 25px;
+  font-weight: 600;
+  color: #333;
+}
+
+.account-text p {
+  margin: 5px 0;
+  font-size: 20px;
+  color: #666;
+}
+.line{
+  border-bottom: 3px solid #E4E7E9; 
+  width: 400px;
+}
+.edit-button{
+  margin: 10px;
+  margin-left: 40px;
+}
+.account-container{
+  display: flex;
+justify-content: space-between;}
+.fun-fact{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 50%;
+}
+
+.Fun-Fact1{
+  display: flex;
+  gap: 20px;
+  background-color: #B9E2FD;
+  border-radius: 8px;
+  padding: 20px;
+}
+.Fun-Fact2{
+  display: flex;
+  gap: 20px;
+  background-color: #EAF7E9;
+  border-radius: 8px;
+  padding: 20px;
+}
+.Fun-Fact3{
+  display: flex;
+  gap: 20px;
+  background-color: #FFF3EB;
+  border-radius: 8px;
+  padding: 20px;
+}
+
+
+.recent{
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
+}
+.recent p a{
+  color: #FA8232;
+}
+
+.order-table {
+  width: 100%;
+  border-collapse: collapse;
+  
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+}
+
+.order-table thead {
+  background-color: #f5f5f5;
+}
+
+.order-table th, .order-table td {
+  padding: 15px;
+  text-align: center;
+  border-bottom: 1px solid #dddddd;
+}
+
+.order-table th {
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #888888;
+}
+
+.order-table tbody tr:hover {
+  background-color: #f1f1f1;
+}
+
+.order-table .status {
+  font-weight: bold;
+}
+.action-button {
+  text-decoration: none;
+  color: red;
+  padding: 8px 12px;
+  border-radius: 4px;
+  font-size: 14px;
+  display: inline-block;
+}
+
+.view-details {
+  color: green;
+}
+.view-details-progress{
+  color: #FA8232;
+}
+.status.completed {
+  color: green;
+}
+
+.status.in-progress {
+  color: #FA8232;
+}
+
+.status.canceled {
+  color: red;
+ 
+}
+
+.re-order {
+  color: red;
+}
+.history-product{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+/* Orderdetails Screen------------------------------- */
+.back{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  border: 1px solid #E4E7E9;
+  padding: 10px 20px;
+  font-family: var(--font-family-secondary);
+}
+.back1{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+ 
+  padding: 10px 20px;
+  font-family: var(--font-family-secondary);
+}
+
+.info-order{
+  display: flex;
+  justify-content: space-between;
+  background-color: #F7E99E;
+  padding: 15px;
+}
+
+.info1{
+  display: flex;
+  flex-direction: column;
+}
+.info2{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.update{
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.order-activity {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+}
+
+.order-activity h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.order-activity ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.activity-item {
+  display: flex;
+  align-items: center;
+  padding: 15px 0;
+  gap: 20px;
+  border-bottom: 1px solid #f0f0f0;
+}
+
+.activity-item:last-child {
+  border-bottom: none;
+}
+
+.activity-icon {
+  width: 40px;
+  height: 40px;
+  margin-right: 15px;
+}
+
+.activity-icon img {
+  width: 100%;
+  height: 100%;
+}
+
+.activity-details p {
+  font-size: 14px;
+  color: #333;
+  margin: 0 0 5px;
+}
+
+.activity-details span {
+  font-size: 12px;
+  color: #999;
+}
+
+/* track order-------------------------------- */
+.track-order-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  font-family: var(--font-family-secondary);
+  text-align: left;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+ margin-top: 50px;
+ margin-bottom: 50px
+}
+
+.track-order-container h2 {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  
+}
+
+.track-order-container p {
+  margin-bottom: 20px;
+  font-size: 18px;
+  color: #b0b0b0;
+}
+
+.track-order-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-bottom: 20px;
+}
+
+.track-order-form input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  color: rgb(10, 10, 10);
+}
+
+.track-order-form input::placeholder {
+  color: #999;
+}
+
+.order-id-info {
+  font-size: 12px;
+  color: #777;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.info-icon {
+
+  margin-right: 8px;
+}
+/* edit products------------------------------ */
+.signup > div:first-child {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.signup h2 {
+  font-size: 1.5rem;
+  color: #333;
+}
+.signup img {
+  max-width: 250px;
+  max-height: 250px;
+  margin-right: 10px;
+}
+
+.New{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.New a{
+  text-decoration: none;
+}
+
+/* Edit User--------------------------- */
+.profile-container {
+  max-width: 1905px;
+    display: flex;
+    gap: 100px;
+    justify-content: center;
+    padding: 50px;
+    padding-bottom: 0;
+    font-family: var(--font-family-secondary);
+}
+
+.profile-content {
+  flex: 1;
+  padding: 20px;
+}
+
+.profile-form {
+  max-width: 75%;
+  border: 1px solid #E4E7E9;
+  padding: 30px;
+}
+
+.profile-image-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.profile-image-label {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.profile-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.profile-image-input {
+  display: none;
+}
+
+.profile-image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.profile-image-label:hover .profile-image-overlay {
+  opacity: 1;
+}
+
+.profile-fields {
+  display: flex;
+  
+  gap: 20px;
+}
+
+.profile-form-group {
+  flex: 1;
+  margin-bottom: 15px;
+}
+
+.profile-form-grouplabel {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.profile-form-group input {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+}
+
+.profile-save-button {
+  display: block;
+  width: 20%;
+  padding: 15px;
+  margin-left: 27rem;
+  background-color: #f58025;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.profile-save-button:hover {
+  background-color: #f26500;
+}
+.profile{
+  display: flex;
+  justify-content: space-between;
+  width: 95%;
+  gap: 50px;
+  padding-bottom: 30px;
+}
+
+
+.dashboard-summary {
+  display: flex;
+  gap: 20px;
+}
+
+.summary-card {
+  background: #f4f4f4;
+  padding: 20px;
+  border-radius: 8px;
+  flex: 1;
+}
+
+.daily-orders, .sales-by-payment, .users-by-month, .product-categories {
+  margin-top: 20px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  margin: 5px 0;
+}
+
+.visit{
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  font-size: 20px;
+}
+.visit p{
+  font-weight: 700;
+  font-size: 29px;
+}
+.funn-fact4{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border: 1px solid #E4E7E9;
+  padding: 20px;
+}
+.summary > li {
+  border: 0.1rem #c0c0c0 solid;
+  margin: 2rem;
+  border-radius: 0.5rem;
+  flex: 1 1 20rem;
+}
+.summary-title {
+  font-size: 2rem;
+  padding: 1rem;
+}
+.summary-body {
+  font-size: 4rem;
+  padding: 1rem;
+  text-align: center;
+}
+
+.summary-title.color1 {
+  background-color: #f0e0e0;
+}
+.summary-title.color2 {
+  background-color: #e0f0e0;
+}
+.summary-title.color3 {
+  background-color: #e0e0f0;
+}
